--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
     width: 25%;
 }
 
-.escola{
+#escola{
     background-image: linear-gradient(#424E61,#16CFF8);
     color:white;
     display: flex;
@@ -81,5 +81,5 @@ body {
 .rodape-imagem{
     height: 60px;
     padding: 12px 0;
-   
+
 }
